vn tousaku + sousaku

--- a/(2019) That's Why I Gave Up On Music/08. In May, From the Window with Emerald Green.md
+++ b/(2019) That's Why I Gave Up On Music/08. In May, From the Window with Emerald Green.md
@@ -15,4 +15,4 @@
 | 「思い出せ！」                                                                 | “omoidase!”                                                                                                                                          | "Remember!"                                                                                                                                                                                                |
 | 思い出したんだ、と喉が叫んだ<br><br>この痛みが君の証明だ<br><br>それでも　それでも聞こえないというなら             | omoidashitan da, to nodo ga sakenda<br><br>Kono itami ga kimi no shoumei da<br><br>Sore demo sore demo kikoenai to iu nara                           | "I remembered," I screamed from my throat<br><br>This pain itself is your proof<br><br>Even so,<br><br>Even so, if you insist that you can't hear it...                                                    |
 ##### Notes
->See [[Letters to Elma#5/17]] for explanation ^1
+>See [[Lore/Letters to Elma#5/17]] for explanation ^1
