--- a/(2020) Plagiarism/06. Replicant.md
+++ b/(2020) Plagiarism/06. Replicant.md
@@ -1,5 +1,5 @@
 レプリカント | Replicant
-#### 
+#### [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)
 
 | Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                              | English                                                                                                                                                                                                                                                                                                                              |
 | ------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
