fix elma's diary

--- a/(2020) Plagiarism/06. Replicant.md
+++ b/(2020) Plagiarism/06. Replicant.md
@@ -8,7 +8,7 @@
 | そしたら心以外は偽物だ<br><br>言葉以外は偽物だ<br><br>神様だって作品なんだから<br><br>僕ら皆レプリカだ<br><br>いつか季節が過ぎ去って<br><br>冷たくなって年老いて<br><br>その時に                            | Soshitara kokoro igai wa nisemono da<br><br>Kotoba igai wa nisemono da<br><br>Kamisama datte sakuhin na n da kara<br><br>Bokura minna repurika da<br><br>Itsuka kisetsu ga sugisatte<br><br>Tsumetaku natte toshioite<br><br>Sono tokini                                             | And then everything but the heart [[#^2]] would be fake<br><br>Everything but words would be fake<br><br>God's just a work of fiction after all<br><br>We're all just replicas<br><br>In due time the seasons pass<br><br>Getting colder and growing older<br><br>At that moment                                                     |
 | 僕は映画をずっと観ている<br><br>つまらないほどに薄い映画<br><br>席を立ってからやっと気付く<br><br>これは僕を描いたドラマだ                                                                   | Boku wa eiga o zutto miteiru<br><br>Tsumaranai hodo ni usui eiga<br><br>Seki o tatte kara yatto kizuku<br><br>Kore wa boku o egaita dorama da                                                                                                                                        | I'm always watching a movie<br><br>A boringly shallow film<br><br>Only after I leave my seat do I finally realize<br><br>This is the drama I wrote                                                                                                                                                                                   |
 | いつか僕らは大人になって、<br><br>手に入れるものも大きくなった<br><br>次は愛でも買えればいいのにね                                                                                   | Itsuka bokura wa otona ni natte,<br><br>Te ni ireru mono mo ōkiku natta<br><br>Tsugi wa ai de mo kaereba ii noni ne                                                                                                                                                                  | As we grow up in due time,<br><br>The things we could get also grew<br><br>If only we could next buy love, right                                                                                                                                                                                                                     |
-| あんたの価値観なんて偽物だ<br><br>思い出だって偽物だ<br><br>心は脳の信号なんだから<br><br>愛も皆レプリカだ<br><br>いつか季節が過ぎ去って<br><br>思い出ばかりが募って<br><br>その時に                          | Anta no kachikan nante nisemono da<br><br>Omoide datte nisemono da<br><br>Kokoro wa nō no shingō na n da kara<br><br>Ai mo minna repurika da<br><br>Itsuka kisetsu ga sugisatte<br><br>Omoide bakari ga tsunotte<br><br>Sono tokini                                                  | Your values are just fucking fakes<br><br>Even memories are just fakes<br><br>The mind is just brain signals, after all<br><br>Love and everyone are just replicas<br><br>In due time the seasons pass<br><br>Nothing but memories growing stronger<br><br>At that moment                                                            |
+| あんたの価値観なんて偽物だ<br><br>思い出だって偽物だ<br><br>心は脳の信号なんだから<br><br>愛も皆レプリカだ<br><br>いつか季節が過ぎ去って<br><br>思い出ばかりが募って<br><br>その時に                          | Anta no kachikan nante nisemono da<br><br>Omoide datte nisemono da<br><br>Kokoro wa nō no shingō na n da kara<br><br>Ai mo minna repurika da<br><br>Itsuka kisetsu ga sugisatte<br><br>Omoide bakari ga tsunotte<br><br>Sono tokini                                                  | Your values are just fucking fakes<br><br>Even memories are just fakes<br><br>The mind[[#^2]] is just brain signals, after all<br><br>Love and everyone are just replicas<br><br>In due time the seasons pass<br><br>Nothing but memories growing stronger<br><br>At that moment                                                     |
 | 満たされるならそれで良かった<br><br>歌を歌うのに理由も無いわ<br><br>他人の為に生きられない<br><br>さよなら以外全部塵                                                                      | Mitasareru nara sorede yokatta<br><br>Uta wo utau noni riyū mo nai wa<br><br>Tanin no tameni ikirarenai<br><br>Sayonara igai zenbu gomi                                                                                                                                              | If only I could have just been satisfied<br><br>Even though I sing songs, there's really no reason to<br><br>I can't live for the sake of others<br><br>Everything beyond goodbye is trash                                                                                                                                           |
 | 人を呪う歌が描きたい<br><br>それで誰かを殺せればいいぜ<br><br>夏の匂いに胸が詰まっていた                                                                                        | Hito wo norou uta ga egakitai<br><br>Sorede dare ka wo korosereba ii ze<br><br>Natsu no nioi ni mune ga tsumatteita                                                                                                                                                                  | I want to create songs that curse people<br><br>If that can kill someone, it'd be great<br><br>The smell of summer was stuck in my chest                                                                                                                                                                                             |
 | 僕らの心以外は偽物だ<br><br>言葉以外は偽物だ<br><br>この世の全部は主観なんだから<br><br>君も皆レプリカだ<br><br>さよならだって投げ出して<br><br>このまま遠く逃げ出して                                     | Bokura no kokoro igai wa nisemono da<br><br>Kotoba igai wa nisemono da<br><br>Kono yo no zenbu wa shukan na n da kara<br><br>Kimi mo minna repurika da<br><br>Sayonara datte nagedashite<br><br>Kono mama tōku nigedashite                                                           | Everything but our hearts is fake<br><br>Everything but words is fake<br><br>Everything in this whole world is subjective after all<br><br>You and everyone are just replicas<br><br>Throw out your farewells<br><br>Run far away like this                                                                                          |
